elastic static 2
