# swagger.json
@@ -810,29 +810,37 @@
     "/elastic/category-rates-all": {
       "get": {
         "summary": "Call elastic rates all data",
-        "parameters": [
-          {
-            "name": "pageSize",
-            "in": "query",
-            "schema": {
-              "type": "integer"
+        "responses": {
+          "200": {
+            "description": "Başarılı yanıt",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "integer"
+                      },
+                      "content": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
             }
           },
-          {
-            "name": "page",
-            "in": "query",
-            "schema": {
-              "type": "integer"
-            }
-          },
-          {
-            "name": "order",
-            "in": "query",
-            "schema": {
-              "type": "string"
-            }
+          "500": {
+            "description": "Sunucu hatası"
           }
-        ],
+        }
+      }
+    },
+    "/elastic/user-static": {
+      "get": {
+        "summary": "Call elastic user, bloger count",
         "responses": {
           "200": {
             "description": "Başarılı yanıt",
